Fixes white space on top margin of profile page

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -65,6 +65,7 @@ body {
     overflow:auto;
     height: 100%;
     padding-top: 50px;
+    margin-top: -10px;
 }
 
 .profile-box {
